deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: demos

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name:  monachus-rancher-demo
  namespace: demos 
  labels:
    app: monachus-rancher-demo
spec:
  replicas: 8
  selector:
    matchLabels:
      app: monachus-rancher-demo
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 10%
  template:
    metadata:
      labels:
        app: monachus-rancher-demo
      annotations:
    spec:
      containers:
        - name: monachus-rancher-demo 
          image: monachus/rancher-demo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080


---

apiVersion: v1
kind: Service
metadata:
  name: monachus-rancher-demo
  namespace: demos 
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: monachus-rancher-demo

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: monachus-rancher-demo
  namespace: demos
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: monachus-rancher-demo
          servicePort: 80
